k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
 name: backend

spec:
 replicas: 1

 selector:
  matchLabels:
   app: backend

 template:
  metadata:
   labels:
    app: backend

  spec:
   containers:

   - name: backend
     image: rohit7669/backend:latest

     ports:
     - containerPort: 8081
