k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
 name: mysql

spec:
 replicas: 1

 selector:
  matchLabels:
   app: mysql

 template:

  metadata:
   labels:
    app: mysql

  spec:
   containers:

   - name: mysql
     image: mysql:8

     ports:
     - containerPort: 3306
